# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  21 Sep 2006; Mike Frysinger <vapier@gentoo.org>:

    Fix udev/devfs addon checks #147856.

  19 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Start scheduled services in the correct order, #148011.

  14 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    RC_ERASE_SWAP has been removed. If you're that paranoid about the swap
    space then use an encrypted swap.
  
  13 Sep 2006; Mike Frysinger <vapier@gentoo.org>:

    Check for the udev/devfs addons rather than binaries #147221.

  12 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    FreeBSD is now fully supported for booting.
    Network support is available from dhclient and ifconfig (basic).

  07 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    It is now possible to have >1 service that can provide foo.
    If something then uses foo it selects which service to depend on using
    the following criteria - not stopped, in runlevel, alphabetical.
    Fixes #46897.

  06 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Add _ewrap to functions.sh which handles new lines and word wrapping
    for our e* commands.

    Fix PPPoA usage, #144194 thanks to Giampaolo Tomassoni.

    iproute2 netlink check has been moved to the ebuild.

    When stopping a ppp link, don't remove the IP address, #145034.

  05 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    wpa_supplicant packet socket checks have been moved to the ebuild.

    Merged more vserver changes from Benedikt Boehm as vserver can now mount.

  03 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Document RC_QUIET.
    We now buffer e* messages when in parallel so we can display them properly
    (ie, init scripts don't mess up the display).

  30 Aug 2006; Mike Frysinger <vapier@gentoo.org>:

    Change the default cdrom fstab entry to use the udev/old name /dev/cdrom 