@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  25 Sep 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Don't rename bridged or bonded interfaces either, #145581.
+
   21 Sep 2006; Mike Frysinger <vapier@gentoo.org>:
 
     Fix udev/devfs addon checks #147856.
